# TeleCloneX

./: .gitignore  README.md  install.py  main.py  pyproject.toml
config/: __init__.py  config-sample.yaml  config.py
install/: install.bat  install.sh
scripts/: ask_from_history.py
src/: cloner.py  logger.py  starter.py
src/chatgpt/: __init__.py  chatgpt_client.py
src/managers/: __init__.py  blacklist.py  channel_manager.py  chat_joiner.py  chat_manager.py  content_cloner.py  file_manager.py  prompt_manager.py  unique_manager.py
src/managers/clone/: __init__.py  extractor.py  publisher.py  uniquifier.py
src/managers/unique/: __init__.py  image.py  text.py  video.py
src/thon/: __init__.py  base_session.py  chat_manager.py  json_converter.py
