[tool.poetry]
name = "teleclonex"
version = "0.1.0"
description = ""
authors = ["atljh <fiodorlukashov@gmail.com>"]
readme = "README.md"

packages = [
    { include = "src" }, 
    { include = "config" },
]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
rich = "^13.8.0"
rich-menu = "^0.2.0"
httpx = "^0.27.2"
telethon = "^1.37.0"
python-socks = "2.1.1"
PyYAML = "^6.0.2"
openai = "^1.52.2"
async-timeout = "^4.0.3"
langdetect = "^1.0.9"
requests = "^2.32.3"
PySocks = "^1.7.1"
tooler = {git = "https://github.com/atljh/tools.git"}
jsoner = {git = "https://github.com/atljh/jsoner.git"}
pytest-asyncio = "^0.25.2"
Pillow = "^10.0.1"
piexif = "^1.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"